--- a/1.html
+++ b/1.html
@@ -1,27 +1,102 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>这里填写标题</title>
-<meta name="keywords" content="这里填写关键词" />
-<meta name="description" content="这里填写说明内容" />
+<html lang="zh-CN">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
+		<title>UU手游</title>
+		<style type="text/css">
+			html{color:#000;background:#FFF}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0}table{border-collapse:collapse;border-spacing:0}fieldset,img{border:0}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal}ol,ul{list-style:none}caption,th{text-align:left}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}q:before,q:after{content:''}abbr,acronym{border:0;font-variant:normal}sup{vertical-align:text-top}sub{vertical-align:text-bottom}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;*font-size:100%}legend{color:#000}
+			.wrapper .image img{
+				display: block;
+				margin: 0 auto;
+				max-width: 100%;
+			}
+			.wrapper h1{
+				font-size:20px;
+				font-weight:bold;
+				padding:20px;
+				text-align:center;
+			}
+			.wrapper .content h1{
+				padding:0 0 10px 0;
+			}
+			.wrapper .content{
+				padding: 20px 15px;
+			}
+			.wrapper .content p{
+				margin: 0 0 15px;
+				line-height: 26px;
+			}
+			.wrapper .content img{
+				max-width: 100%;
+				height: auto;
+			}
 
-<script language="JavaScript" type="text/javascript">
-<a id="ibangkf" href="https://www.ibangkf.com">在线客服系统</a><script>(function(){var st = document.createElement("script");st.src = "https://c.ibangkf.com/i/c-wangdefa888.js";var s = document.getElementsByTagName("script")[0];s.parentNode.insertBefore(st, s);})();</script>
+			.mod-link{
+				padding-top:50px;
+				width:100%;
+				line-height: 24px;
+				text-align: center;
+				font-size: 16px;
+				color: #333;
+			}
+			.mod-link p{
+				color: #999;
+			}
+			.mod-link .text{
+				padding: 10px;
+				margin: 10px 10px 40px;
+			    line-height: 1.2;
+			    color: #333;
+			    word-wrap: break-word;
+			    word-break: break-all;
+			    text-align: center;
+			    background: #f2f2f2;
+			}
+			.mod-link .safe{
+				margin-bottom: 8px;
+			}
+			.mod-link .text span{
+				overflow: hidden;
+			    text-overflow: ellipsis;
+			    display: -webkit-box;
+			    -webkit-line-clamp: 3;
+			    -webkit-box-orient: vertical;
+			}
+			.mod-link a{
+				text-decoration: none;
+			}
+			.mod-link .btn{
+			    display: block;
+			    width: 70%;
+			    height: 40px;
+			    line-height: 40px;
+			    color: #FFF;
+			    text-align: center;
+			    border-radius: 4px;
+			    color: #56a848;
+			    border: 1px solid #56a848;
+			    margin: 0 auto;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="wrapper">
+							<div class="content">
+					<h1>正在接入客服，请稍等·····</h1>
+									
 
+<script>
+function changeurl(){
+var arr = new Array(
+"https://te78.github.io/kefu/kf.html",
+);
+window.location.href = arr[Math.floor(Math.random() * arr.length)];
+}
+changeurl(); 
 </script>
 
-<style type="text/css">
-<!--CSS样式代码位置-->
-</style>
-
-</head>
-
-<body>
-
-<a id="ibangkf" href="https://www.ibangkf.com">在线客服系统</a><script>(function(){var st = document.createElement("script");st.src = "https://c.ibangkf.com/i/c-wangdefa888.js";var s = document.getElementsByTagName("script")[0];s.parentNode.insertBefore(st, s);})();</script>
 
 
-</body>
+
 </html>
-
